--- a/packages/expo-dev-menu/android/build.gradle
+++ b/packages/expo-dev-menu/android/build.gradle
@@ -106,6 +106,9 @@ repositories {
 dependencies {
   implementation project(":expo-dev-menu-interface")
 
+  implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+  implementation 'com.google.code.gson:gson:2.8.6'
+
   //noinspection GradleDynamicVersion
   implementation 'com.facebook.react:react-native:+'
   implementation "androidx.transition:transition:1.1.0" // use by react-native-reanimated
@@ -117,6 +120,8 @@ dependencies {
   api "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
   api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${safeExtGet('kotlinVersion', '1.4.21')}"
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
 
   api "androidx.browser:browser:1.2.0"
 }
